footer change p to a

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <!------------------------------------------------------------------------------>
 
-        <!--  -->
+        <!------------------------------- footer about site box ------------------------>
         <div class="default-site-footer-box">
             <div class="footer-content-box">
                 <h1 class="footer-h1">Contact Us</h1>
@@ -113,11 +113,11 @@
             <div class="footer-hr"></div>
             <div class="footer-content-box">
                 <h1 class="footer-h1">Utility Pages</h1>
-                <p class="footer-p">Style Guide</p>
-                <p class="footer-p">404 Not Found</p>
-                <p class="footer-p">Password Protected</p>
-                <p class="footer-p">Licences</p>
-                <p class="footer-p">Changelog</p>
+                <a class="footer-p">Style Guide</p>
+                <a class="footer-p">404 Not Found</p>
+                <a class="footer-p">Password Protected</p>
+                <a class="footer-p">Licences</p>
+                <a class="footer-p">Changelog</p>
             </div>
         </div>
         <hr>
