fixed header section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -103,11 +110,11 @@
                 <p class="footer-p">Simply dummy text of the printing and typesetting industry. <br>
                     Lorem Ipsum simply dummy text of the printing 
                 </p>
-                <div class="footer-social-box">
-                    <a href="" class="social-media-icon"></a>
-                    <a href="" class="social-media-icon"></a>
-                    <a href="" class="social-media-icon"></a>
-                    <a href="" class="social-media-icon"></a>
+                <div class="social">
+                    <a href="https://instagram.com"><i id="logo" class="fa-brands fa-instagram"></i></a>
+                    <a href="https://facebook.com"><i id="logo" class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com/Twitter"><i id="logo" class="fa-brands fa-twitter"></i></a>
+                    <a href="https://pinterest.com"><i id="logo" class="fa-brands fa-pinterest"></i></a>
                 </div>
             </div>
             <div class="footer-hr"></div>
