some sytle for footer fixed header

--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
 
         <!------------------------------- footer about site box ------------------------>
         <div class="default-site-footer-box">
-            <div class="footer-content-box">
+            <div class="footer-content-box text-align-end">
                 <h1 class="footer-h1">Contact Us</h1>
                 <span class="footer-span">Email</span>
-                <a href="mailto:needhelp@Organia.com">needhelp@Organia.com</a>
+                <a href="mailto:needhelp@Organia.com" class="footer-p">needhelp@Organia.com</a>
                 <span class="footer-span">Phone</span>
-                <a href="tel:+666 888 888">666 888 888</a>
+                <a href="tel:+666 888 888" class="footer-p">666 888 888</a>
                 <span class="footer-span">Address</span>
-                <a href="">88 road, borklyn street, USA</a>
+                <a href="" class="footer-p">88 road, borklyn street, USA</a>
             </div>
-            <div class="footer-hr"></div>
-            <div class="footer-content-box">
+            <div class="footer-vertical-hr"></div>
+            <div class="footer-content-box text-align-center">
                 <div class="site-logo-box">
                     <!-- site logo -->
                     <img src="img/defaults/logo.svg" alt="" class="site-logo">
@@ -110,24 +110,24 @@
                 <p class="footer-p">Simply dummy text of the printing and typesetting industry. <br>
                     Lorem Ipsum simply dummy text of the printing 
                 </p>
-                <div class="social">
-                    <a href="https://instagram.com"><i id="logo" class="fa-brands fa-instagram"></i></a>
-                    <a href="https://facebook.com"><i id="logo" class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/Twitter"><i id="logo" class="fa-brands fa-twitter"></i></a>
-                    <a href="https://pinterest.com"><i id="logo" class="fa-brands fa-pinterest"></i></a>
+                <div class="footer-social">
+                    <a href="https://instagram.com" id="logo" class="fa-brands fa-instagram footer-social-icon"></a>
+                    <a href="https://facebook.com" id="logo" class="fa-brands fa-facebook footer-social-icon"></a>
+                    <a href="https://twitter.com/Twitter" id="logo" class="fa-brands fa-twitter footer-social-icon"></a>
+                    <a href="https://pinterest.com" id="logo" class="fa-brands fa-pinterest footer-social-icon"></a>
                 </div>
             </div>
-            <div class="footer-hr"></div>
-            <div class="footer-content-box">
+            <div class="footer-vertical-hr"></div>
+            <div class="footer-content-box text-align-start">
                 <h1 class="footer-h1">Utility Pages</h1>
-                <a class="footer-p">Style Guide</p>
-                <a class="footer-p">404 Not Found</p>
-                <a class="footer-p">Password Protected</p>
-                <a class="footer-p">Licences</p>
-                <a class="footer-p">Changelog</p>
+                <a href="" class="footer-p">Style Guide</a>
+                <a href="" class="footer-p">404 Not Found</a>
+                <a href="" class="footer-p">Password Protected</a>
+                <a href="" class="footer-p">Licences</a>
+                <a href="" class="footer-p">Changelog</a>
             </div>
         </div>
-        <hr>
+        <div class="footer-hr"></div>
         <div class="footer-copyright">
             <p class="footer-p">Copyright &#169;</p><span class="footer-span">Organick</span>
         </div>
