started footer section

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <div class="default-site-footer-box">
             <div class="footer-form-container">
                 <div class="container-inner-box">
-                    <h1 class="footer-span"></h1>
+                    <h1 class="footer-subscribe-text">Subscribe to <br> our Newsletter</h1>
                 </div>
                 <form class="footer-form">
-                    <input type="email" name="" id="" placeholder="Your Email Address">
+                    <input type="email" name="" id="" placeholder="Your Email Address" class="footer-form-input">
                     <button type="button" class="footer-form-button">Subscribe</button>
                 </form>
             </div>
