--- a/index.html
+++ b/index.html
@@ -62,15 +62,11 @@
             <!-- place for your header body contents -->
         </div>
     </header>
-    <!--  -->
+    <main>
 
+        <!-- put your content here -->
 
-
-    <!-- place for sections in your page -->
-
-
-
-    <!--  -->
+    </main>
     <footer class="default-site-footer">
         <div class="footer-container">
             <!----------------------------- footer subscribe form -------------------------->
