--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
         </nav>
         <!-- end of navigation bar -->
         <div class="header-container">
-            <!-- place for your header body contents -->
+            <div class="header-content">
+                <span class="header-content-span">100% Natural Food</span>
+                <h1 class="header-content-h1">
+                    Choose the best <br>
+                    healthier way <br>
+                    of life
+                </h1>
+                <button type="button" class="header-content-button">Export now <img src="img/main/Aerrow.png" alt=""></button>
+            </div>
         </div>
     </header>
     <main>
