about_us page created

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <h1 class="site-name">Organick</h1>
                 </a>
                 <div class="text-nav-box">
-                    <a href="" class="text-nav">Home</a>
-                    <a href="" class="text-nav">About</a>
+                    <a href="index.html" class="text-nav">Home</a>
+                    <a href="about_us.html" class="text-nav">About</a>
                     <!-- select box -->
                     <div class="select-box">
                         <label for="pages" class="text-nav">Pages </label>
