--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -11,11 +18,11 @@
         <!-- navigation bar -->
         <nav class="default-site-nav">
             <div class="nav-box-1">
-                <div class="site-logo-box">
+                <a href="" class="site-logo-box">
                     <!-- site logo -->
                     <img src="img/defaults/logo.svg" alt="" class="site-logo">
                     <h1 class="site-name">Organick</h1>
-                </div>
+                </a>
                 <div class="text-nav-box">
                     <a href="" class="text-nav">Home</a>
                     <a href="" class="text-nav">About</a>
@@ -31,9 +38,6 @@
                             <option class="select-text">Team            </option>
                             <option class="select-text">Blog            </option>
                             <option class="select-text">Contact         </option>
-                            <option class="select-text">Licenses        </option>
-                            <option class="select-text">Changelog       </option>
-                            <option class="select-text">Password Protect</option>
                         </select>
                     </div>
                     <a href="" class="text-nav">Shop</a>
@@ -48,7 +52,7 @@
                     <button class="search-button"><img src="img/defaults/search.svg" alt="" class="search-icon"></button>
                 </div>
                 <div class="nav-cart-box">
-                    <div class="cart-icon"><img src="img/defaults/cart.svg" alt=""></div>
+                    <button class="cart-icon"><img src="img/defaults/cart.svg" alt=""></button>
                     <span class="cart-count-text">Cart (0)</span>
                 </div>
             </div>
@@ -58,58 +62,66 @@
             <!-- place for your header body contents -->
         </div>
     </header>
-    <!--  -->
+    <main>
 
+        <!-- put your content here -->
 
-
-    <!-- place for sections in your page -->
-
-
-
-    <!--  -->
+    </main>
     <footer class="default-site-footer">
-
-        <!------------------------------- footer about site box ------------------------>
-        <div class="default-site-footer-box">
-            <div class="footer-content-box">
-                <h1 class="footer-h1">Contact Us</h1>
-                <span class="footer-span">Email</span>
-                <a href="mailto:needhelp@Organia.com">needhelp@Organia.com</a>
-                <span class="footer-span">Phone</span>
-                <a href="tel:+666 888 888">666 888 888</a>
-                <span class="footer-span">Address</span>
-                <a href="">88 road, borklyn street, USA</a>
-            </div>
-            <div class="footer-hr"></div>
-            <div class="footer-content-box">
-                <div class="site-logo-box">
-                    <!-- site logo -->
-                    <img src="img/defaults/logo.svg" alt="" class="site-logo">
-                    <h1 class="site-name">Organick</h1>
+        <div class="footer-container">
+<!------------------------------- footer about site box ------------------------>
+            <div class="default-site-footer-box">
+                <div class="footer-content-box text-align-end">
+                    <h1 class="footer-h1">Contact Us</h1>
+                    <div class="footer-text-box">
+                        <span class="footer-span">Email</span>
+                        <a href="mailto:needhelp@Organia.com" class="footer-p">needhelp@Organia.com</a>
+                    </div>
+                    <div class="footer-text-box">
+                        <span class="footer-span">Phone</span>
+                        <a href="tel:+666 888 888" class="footer-p">666 888 888</a>
+                    </div>
+                    <div class="footer-text-box">
+                        <span class="footer-span">Address</span>
+                        <a href="" class="footer-p">88 road, borklyn street, USA</a>
+                    </div>
                 </div>
-                <p class="footer-p">Simply dummy text of the printing and typesetting industry. <br>
-                    Lorem Ipsum simply dummy text of the printing 
-                </p>
-                <div class="footer-social-box">
-                    <a href="" class="social-media-icon"></a>
-                    <a href="" class="social-media-icon"></a>
-                    <a href="" class="social-media-icon"></a>
-                    <a href="" class="social-media-icon"></a>
+                <div class="footer-vertical-hr"></div>
+                <div class="footer-content-box text-align-center">
+                    <div class="site-logo-box">
+                        <!-- site logo -->
+                        <img src="img/defaults/logo.svg" alt="" class="site-logo">
+                        <h1 class="site-name">Organick</h1>
+                    </div>
+                    <p class="footer-p">
+                        Simply dummy text of the printing and typesetting industry. <br>
+                        Lorem Ipsum simply dummy text of the printing 
+                    </p>
+                    <div class="footer-social">
+                        <a href="https://instagram.com" id="logo" class="fa-brands fa-instagram footer-social-icon"></a>
+                        <a href="https://facebook.com" id="logo" class="fa-brands fa-facebook footer-social-icon"></a>
+                        <a href="https://twitter.com/Twitter" id="logo" class="fa-brands fa-twitter footer-social-icon"></a>
+                        <a href="https://pinterest.com" id="logo" class="fa-brands fa-pinterest footer-social-icon"></a>
+                    </div>
                 </div>
-            </div>
-            <div class="footer-hr"></div>
-            <div class="footer-content-box">
-                <h1 class="footer-h1">Utility Pages</h1>
-                <a class="footer-p">Style Guide</p>
-                <a class="footer-p">404 Not Found</p>
-                <a class="footer-p">Password Protected</p>
-                <a class="footer-p">Licences</p>
-                <a class="footer-p">Changelog</p>
+                <div class="footer-vertical-hr"></div>
+                <div class="footer-content-box text-align-start">
+                    <h1 class="footer-h1">Utility Pages</h1>
+                    <div class="footer-text-box-2">
+                        <a href="" class="footer-p">Style Guide</a>
+                        <a href="" class="footer-p">404 Not Found</a>
+                        <a href="" class="footer-p">Password Protected</a>
+                        <a href="" class="footer-p">Licences</a>
+                        <a href="" class="footer-p">Changelog</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <hr>
-        <div class="footer-copyright">
-            <p class="footer-p">Copyright &#169;</p><span class="footer-span">Organick</span>
+        <div class="footer-copyright-box">
+            <div class="footer-hr"></div>
+            <div class="footer-copyright">
+                <p class="footer-p">Copyright &#169;</p><span class="footer-span">Organick</span>
+            </div>
         </div>
     </footer>
 </body>
