head-baner added to about_us page

--- a/about_us.html
+++ b/about_us.html
@@ -58,9 +58,20 @@
             </div>
         </nav>
         <!-- end of navigation bar -->
+
+
+        <!-- header body content start -->
         <div class="header-container">
-            <span>hello</span>
-            <!-- place for your header body contents -->
+            <div class="head-baner">
+                <img src="img/about_us/about_us_header.svg" alt="" class="head-img">
+                <span class="head-text">about us</span>
+            </div>
+
+
+
+
+
+
         </div>
     </header>
     <main>
