--- a/about_us.html
+++ b/about_us.html
@@ -62,20 +62,39 @@
 
         <!-- header body content start -->
         <div class="header-container">
+
+            <!-- banner start -->
             <div class="head-baner">
                 <img src="img/about_us/about_us_header.svg" alt="" class="head-img">
                 <span class="head-text">about us</span>
             </div>
-
-
-
-
-
-
+            <!--banner end -->
         </div>
     </header>
     <main>
         <!-- put your content here -->
+        <div class="plate-box">
+            <div class="plate-img">
+                <img src="img/about_us/about_us_plate.svg" alt="">
+
+            </div>
+            <div class="plate-txt">
+                <h3>About Us</h3>
+                <p class="big-p">We do Creative<br>Things for Success</p>
+                <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.<br><br>Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                <div class="icon-section">
+                    <div class="tractor-part">
+                        <img src="img/about_us/plate-tractor.svg" alt="">
+                        <span>Modern Agriculture Equipment</span>
+                    </div>
+                    <div class="chemic-part">
+                        <img src="img/about_us/plate-chemical_plant.svg" alt="">
+                        <span>No growth hormones are used</span>
+                    </div>
+                </div>
+                <button type="button" class="footer-form-button">Explore More</button>
+            </div>
+        </div>
 
     </main>
     <footer class="default-site-footer">
