--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
         <!-- end of navigation bar -->
         <div class="header-container">
             <!-- place for your header body contents -->
+            <div class="img">
+                <img src="img/404-img.png" alt="">
+            </div>
+            <div class="text">
+                <h1>
+                    404
+                </h1>
+                <h2>
+                    Page not found
+                </h2>
+                <p>
+                    The page you are looking for doesn't exist or has been moved
+                </p>
+                <button>
+                    Go to Homepage
+                </button>
+            </div>
         </div>
     </header>
     <main>
