containers to header sections added

--- a/about_us.html
+++ b/about_us.html
@@ -72,29 +72,56 @@
         </div>
     </header>
     <main>
-        <!-- put your content here -->
-        <div class="plate-box">
-            <div class="plate-img">
-                <img src="img/about_us/about_us_plate.svg" alt="">
-
-            </div>
-            <div class="plate-txt">
-                <h3>About Us</h3>
-                <p class="big-p">We do Creative<br>Things for Success</p>
-                <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.<br><br>Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-                <div class="icon-section">
-                    <div class="tractor-part">
-                        <img src="img/about_us/plate-tractor.svg" alt="">
-                        <span>Modern Agriculture Equipment</span>
-                    </div>
-                    <div class="chemic-part">
-                        <img src="img/about_us/plate-chemical_plant.svg" alt="">
-                        <span>No growth hormones are used</span>
-                    </div>
+        <!-- a section with plate start -->
+        <div class="my-container">
+            <div class="plate-box">
+                <div class="plate-img">
+                    <img src="img/about_us/about_us_plate.svg" alt="">
                 </div>
-                <button type="button" class="footer-form-button">Explore More</button>
+                <div class="plate-txt">
+                    <h3>About Us</h3>
+                    <p class="big-p">We do Creative<br>Things for Success</p>
+                    <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.<br><br>Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                    <div class="icon-section">
+                        <div class="tractor-part">
+                            <img src="img/about_us/plate-tractor.svg" alt="">
+                            <span>Modern Agriculture Equipment</span>
+                        </div>
+                        <div class="chemic-part">
+                            <img src="img/about_us/plate-chemical_plant.svg" alt="">
+                            <span>No growth hormones are used</span>
+                        </div>
+                    </div>
+                    <button type="button" class="footer-form-button">
+                        <span>Explore More</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+                        <circle cx="9.5" cy="9.5" r="9.5" fill="#335B6B"/>
+                        <path d="M9.47641 6.12891L12.871 9.19342L9.47641 12.2579M12.3995 9.19342H5.51611" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
+        
+        <!-- a section with plate end -->
+
+        <!-- a section containing vegetables start -->
+
+        <div class="veg-background">
+            <div class="my-container">
+                <div class="decide">
+                    <div class="decide-text">
+
+
+                    </div>
+                    <div class="decide-img">
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </main>
     <footer class="default-site-footer">
