--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </p>
                 <button>
                     Go to Homepage
-                </button>
+                    <img src="img/arrow.svg" alt="" class="arrow">
             </div>
         </div>
     </header>
