--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="nav-box-1">
                 <a href="" class="site-logo-box">
                     <!-- site logo -->
-                    <img src="img/defaults/logo.svg" alt="" class="site-logo">
+                    <img src="img/logo.svg" alt="" class="site-logo">
                     <h1 class="site-name">Organick</h1>
                 </a>
                 <div class="text-nav-box">
@@ -49,10 +49,10 @@
                 <!-- navigation search box -->
                 <div class="search-box">
                     <input type="text" class="search-input">
-                    <button class="search-button"><img src="img/defaults/search.svg" alt="" class="search-icon"></button>
+                    <button class="search-button"><img src="img/search.svg" alt="" class="search-icon"></button>
                 </div>
                 <div class="nav-cart-box">
-                    <button class="cart-icon"><img src="img/defaults/cart.svg" alt=""></button>
+                    <button class="cart-icon"><img src="img/cart.svg" alt=""></button>
                     <span class="cart-count-text">Cart (0)</span>
                 </div>
             </div>
