--- a/about_us.html
+++ b/about_us.html
@@ -111,7 +111,26 @@
             <div class="my-container">
                 <div class="decide">
                     <div class="decide-text">
+                        <h3>Why Choose us?</h3>
 
+                        <p class="big-p">We do not buy from the
+                            open market & traders<p>
+
+                        <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                        
+                        <div class="decide-span">
+                            <img src="img/about_us/span-logo.svg" alt="">
+                            <span>100% Natural Product</span>
+                        </div>
+
+                        <p class="small-p p-last-child">Simply dummy text of the printing and typesetting industry Lorem Ipsum</p>
+
+                        <div class="decide-span">
+                            <img src="img/about_us/span-logo.svg" alt="">
+                            <span> Increases resistance</span>
+                        </div>
+
+                        <p class="small-p p-last-child">Filling, and temptingly healthy, our Biona Organic Granola with Wild Berries is just the thing</p>
 
                     </div>
                     <div class="decide-img">
