first version of select box

--- a/index.html
+++ b/index.html
@@ -13,22 +13,33 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="mouse">
     <header class="default-site-header">
         <!-- navigation bar -->
         <nav class="default-site-nav">
-            <div class="nav-box-1">
+            <div class="nav-box-1 menu">
                 <a href="" class="site-logo-box">
                     <!-- site logo -->
                     <img src="img/defaults/logo.svg" alt="" class="site-logo">
                     <h1 class="site-name">Organick</h1>
                 </a>
-                <div class="text-nav-box">
+                <div class="text-nav-box menu__list">
                     <a href="" class="text-nav">Home</a>
                     <a href="" class="text-nav">About</a>
                     <!-- select box -->
                     <div class="select-box">
-                        <label for="pages" class="text-nav">Pages </label>
+                        <a href="" class="text-nav menu__link">Pages </a>
+                        <span class="menu__arrow arrow"></span>
+                        <div class="sub-menu__list">
+                            <a class="select-box-menu-list-item">Organick</a>
+                            <a class="select-box-menu-list-item">About</a>
+                            <a class="select-box-menu-list-item">Shop</a>
+                            <a class="select-box-menu-list-item">Service</a>
+                            <a class="select-box-menu-list-item">Portfolio</a>
+                            <a class="select-box-menu-list-item">Team</a>
+                            <a class="select-box-menu-list-item">Blog</a>
+                            <a class="select-box-menu-list-item">Contact</a>
+                        </div>
                     </div>
                     <a href="" class="text-nav">Shop</a>
                     <a href="" class="text-nav">Projects</a>
@@ -128,5 +139,6 @@
             </div>
         </div>
     </footer>
+    <!-- <script src="js/script.js"></script> -->
 </body>
 </html>
