--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                         <a href="" class="text-nav menu__link">Pages </a>
                         <span class="menu__arrow arrow"></span>
                         <div class="sub-menu__list">
-                            <a class="select-box-menu-list-item">Organick</a>
-                            <a class="select-box-menu-list-item">About</a>
-                            <a class="select-box-menu-list-item">Shop</a>
-                            <a class="select-box-menu-list-item">Service</a>
-                            <a class="select-box-menu-list-item">Portfolio</a>
-                            <a class="select-box-menu-list-item">Team</a>
-                            <a class="select-box-menu-list-item">Blog</a>
-                            <a class="select-box-menu-list-item">Contact</a>
+                            <a href="" class="select-box-menu-list-item">About</a>
+                            <a href="" class="select-box-menu-list-item">Shop</a>
+                            <a href="" class="select-box-menu-list-item">Organick</a>
+                            <a href="" class="select-box-menu-list-item">Service</a>
+                            <a href="" class="select-box-menu-list-item">Portfolio</a>
+                            <a href="" class="select-box-menu-list-item">Team</a>
+                            <a href="" class="select-box-menu-list-item">Blog</a>
+                            <a href="" class="select-box-menu-list-item">Contact</a>
                         </div>
                     </div>
                     <a href="" class="text-nav">Shop</a>
