added .header-body fixed .default-site-header

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
             </div>
         </nav>
         <!-- end of navigation bar -->
-        <div class="header-container">
-            <!-- place for your header body contents -->
+        <div class="header-body">
+            <div class="header-container">
+                <!-- place for your header body contents -->
+            </div>
         </div>
     </header>
     <main>
