added .header-body and fixed place of .header-container

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
                 </div>
             </div>
         </nav>
-        <!-- end of navigation bar -->
-        <div class="header-container">
-            <!-- place for your header body contents -->
+        <div class="header-body">
+            <!-- end of navigation bar -->
+            <div class="header-container">
+                <!-- place for your header body contents -->
+            </div>
         </div>
     </header>
     <main>
