changed header-container added header-body

--- a/Organick.html
+++ b/Organick.html
@@ -58,15 +58,17 @@
             </div>
         </nav>
         <!-- end of navigation bar -->
-        <div class="header-container">
-            <div class="header-content">
-                <span class="header-content-span">100% Natural Food</span>
-                <h1 class="header-content-h1">
-                    Choose the best <br>
-                    healthier way <br>
-                    of life
-                </h1>
-                <button type="button" class="header-content-button">Export now <img src="img/main/Aerrow.png" alt=""></button>
+        <div class="header-body">
+            <div class="header-container">
+                <div class="header-content">
+                    <span class="header-content-span">100% Natural Food</span>
+                    <h1 class="header-content-h1">
+                        Choose the best <br>
+                        healthier way <br>
+                        of life
+                    </h1>
+                    <button type="button" class="header-content-button">Explore now <img src="img/main/Aerrow.png" alt=""></button>
+                </div>
             </div>
         </div>
     </header>
