--- a/Organick.html
+++ b/Organick.html
@@ -67,16 +67,84 @@
                         healthier way <br>
                         of life
                     </h1>
-                    <button type="button" class="header-content-button">Explore now <img src="img/main/Aerrow.png" alt=""></button>
+                    <button type="button" class="header-content-button">Explore Now <img src="img/main/Aerrow.png" alt=""></button>
                 </div>
             </div>
         </div>
     </header>
+    <!---------------------- all pages without header and footer --------------------------->
     <main>
 
-        <!-- put your content here -->
+        <!---------------------------------- page-1 -------------------------------------->
 
+        <section class="page-1">
+            <div class="page-1-body">
+                <div class="page-1-box">
+                    <img src="" alt="">
+                </div>
+                <div class="page-1-box">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!---------------------------------- page-2 -------------------------------------->
+
+        <section class="page-2">
+            <div class="page-2-body">
+
+            </div>
+        </section>
+
+        <!---------------------------------- page-3 -------------------------------------->
+
+        <section class="page-3">
+            <div class="page-3-body">
+
+            </div>
+        </section>
+
+        <!---------------------------------- page-4 -------------------------------------->
+
+        <section class="page-4">
+            <div class="page-4-body">
+
+            </div>
+        </section>
+
+        <!---------------------------------- page-5 -------------------------------------->
+
+        <section class="page-5">
+            <div class="page-5-body">
+
+            </div>
+        </section>
+
+        <!---------------------------------- page-6 -------------------------------------->
+
+        <section class="page-6">
+            <div class="page-6-body">
+
+            </div>
+        </section>
+
+        <!---------------------------------- page-7 -------------------------------------->
+
+        <section class="page-7">
+            <div class="page-7-body">
+
+            </div>
+        </section>
+
+        <!---------------------------------- page-8 -------------------------------------->
+
+        <section class="page-8">
+            <div class="page-8-body">
+
+            </div>
+        </section>
     </main>
+    <!---------------------------------- end of all pages ------------------------------------>
     <footer class="default-site-footer">
         <div class="footer-container">
             <!----------------------------- footer subscribe form -------------------------->
