--- a/Organick.html
+++ b/Organick.html
@@ -79,12 +79,8 @@
 
         <section class="page-1">
             <div class="page-1-body">
-                <div class="page-1-box">
-                    <img src="" alt="">
-                </div>
-                <div class="page-1-box">
-                    <img src="" alt="">
-                </div>
+                <img src="img/main/page-1-1.svg" alt="">
+                <img src="img/main/page-1-2.svg" alt="">
             </div>
         </section>
 
