--- a/Organick.html
+++ b/Organick.html
@@ -88,7 +88,32 @@
 
         <section class="page-2">
             <div class="page-2-body">
-
+                <div class="page-2-box">
+                    <img src="img/main/page-2-bg-img.png" alt="">
+                </div>
+                <div class="page-2-box">
+                    <span class="page-2-italic-green"></span>
+                    <h1 class="page-2-h1-blue"></h1>
+                    <p class="page-2-p"></p>
+                    <div class="page-2-inner">
+                        <div class="page-2-icon-box">
+                            <img src="img/main/page-2-1.png" alt="">
+                        </div>
+                        <div class="page-2-inner-box">
+                            <h1 class="page-2-h1-small"></h1>
+                            <p class="page-2-p"></p>
+                        </div>
+                    </div>
+                    <div class="page-2-inner">
+                        <div class="page-2-icon-box">
+                            <img src="img/main/page-2-2.png" alt="">
+                        </div>
+                        <div class="page-2-inner-box">
+                            <h1 class="page-2-h1-small"></h1>
+                            <p class="page-2-p"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
