--- a/Organick.html
+++ b/Organick.html
@@ -79,8 +79,14 @@
 
         <section class="page-1">
             <div class="page-1-body">
-                <img src="img/main/page-1-1.svg" alt="">
-                <img src="img/main/page-1-2.svg" alt="">
+                <div class="page-1-box-1">
+                    <span class="page-1-italic white">Natural!!</span>
+                    <p class="page-1-p white">Get Garden <br> Fresh Fruits</p>
+                </div>
+                <div class="page-1-box-2">
+                    <span class="page-1-italic green">Offer!!</span>
+                    <p class="page-1-p blue">Get 10% off <br> on Vegetables</p>
+                </div>
             </div>
         </section>
 
