--- a/Organick.html
+++ b/Organick.html
@@ -67,7 +67,7 @@
                         healthier way <br>
                         of life
                     </h1>
-                    <button type="button" class="header-content-button">Explore Now <img src="img/main/Aerrow.png" alt=""></button>
+                    <button type="button" class="header-content-button">Explore Now <img src="img/main/aerrow.png" alt=""></button>
                 </div>
             </div>
         </div>
@@ -81,11 +81,17 @@
             <div class="page-1-body">
                 <div class="page-1-box-1">
                     <span class="page-1-italic white">Natural!!</span>
-                    <p class="page-1-p white">Get Garden <br> Fresh Fruits</p>
+                    <p class="page-1-p white">
+                        Get Garden <br>
+                        Fresh Fruits
+                    </p>
                 </div>
                 <div class="page-1-box-2">
                     <span class="page-1-italic green">Offer!!</span>
-                    <p class="page-1-p blue">Get 10% off <br> on Vegetables</p>
+                    <p class="page-1-p blue">
+                        Get 10% off <br>
+                        on Vegetables
+                    </p>
                 </div>
             </div>
         </section>
@@ -94,20 +100,30 @@
 
         <section class="page-2">
             <div class="page-2-body">
-                <div class="page-2-box">
+                <div class="page-2-box-1">
                     <img src="img/main/page-2-bg-img.png" alt="">
                 </div>
-                <div class="page-2-box">
-                    <span class="page-2-italic-green"></span>
-                    <h1 class="page-2-h1-blue"></h1>
-                    <p class="page-2-p"></p>
+                <div class="page-2-box-2">
+                    <span class="page-2-italic-green">About Us</span>
+                    <h1 class="page-2-h1-blue">
+                        We Believe in Working <br> 
+                        Accredited Farmers
+                    </h1>
+                    <p class="page-2-p">
+                        Simply dummy text of the printing and typesetting industry. Lorem had ceased to <br>
+                        been the industry's standard dummy text ever since the 1500s, when an unknown <br>
+                        printer took a galley.
+                    </p>
                     <div class="page-2-inner">
                         <div class="page-2-icon-box">
                             <img src="img/main/page-2-1.png" alt="">
                         </div>
                         <div class="page-2-inner-box">
-                            <h1 class="page-2-h1-small"></h1>
-                            <p class="page-2-p"></p>
+                            <h1 class="page-2-h1-small">Organic Foods Only</h1>
+                            <p class="page-2-p">
+                                Simply dummy text of the printing and typesetting <br>
+                                industry. Lorem Ipsum
+                            </p>
                         </div>
                     </div>
                     <div class="page-2-inner">
@@ -115,10 +131,14 @@
                             <img src="img/main/page-2-2.png" alt="">
                         </div>
                         <div class="page-2-inner-box">
-                            <h1 class="page-2-h1-small"></h1>
-                            <p class="page-2-p"></p>
+                            <h1 class="page-2-h1-small">Quality Standards</h1>
+                            <p class="page-2-p">
+                                Simply dummy text of the printing and typesetting <br>
+                                industry. Lorem Ipsum
+                            </p>
                         </div>
                     </div>
+                    <button type="button" class="page-2-button">Shop Now <img src="img/main/aerrow.png" alt="" class="page-2-aerrow"></button>
                 </div>
             </div>
         </section>
